--- a/404.html
+++ b/404.html
@@ -1,138 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Mind Map Wizard: Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
-    <meta name="keywords" content="mind map, mind mapping, AI, text to mindmap, free mind map generator, no sign up, no ads">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta
+            name="description"
+            content="Mind Map Wizard: Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+        <meta
+            name="keywords"
+            content="mind map, mind mapping, AI, text to mindmap, free mind map generator, no sign up, no ads">
 
-    <meta property="og:title" content="Mind Map Wizard | Text to Mind Map AI">
-    <meta property="og:description" content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
-    <meta property="og:image" content="/img/meta-img.jpg">
+        <meta property="og:title" content="Mind Map Wizard | Text to Mind Map AI">
+        <meta
+            property="og:description"
+            content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+        <meta property="og:image" content="/img/meta-img.jpg">
 
-    <meta property="og:type" content="website">
+        <meta property="og:type" content="website">
 
-    <meta name="twitter:card" content="/img/meta-img.jpg">
-    <meta name="twitter:title" content="Mind Map Wizard | Text to Mind Map AI">
-    <meta name="twitter:description" content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
-    <meta name="twitter:image" content="/img/meta-img.jpg">
+        <meta name="twitter:card" content="/img/meta-img.jpg">
+        <meta name="twitter:title" content="Mind Map Wizard | Text to Mind Map AI">
+        <meta
+            name="twitter:description"
+            content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+        <meta name="twitter:image" content="/img/meta-img.jpg">
 
-    <link rel="icon" type="image/png" href="/img/favicon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/img/favicon32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/img/favicon48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="/img/favicon64.png" sizes="64x48">
-    <link rel="icon" type="image/png" href="/img/favicon96.png" sizes="96x96">
-    <link rel="apple-touch-icon" href="/img/logo.png">
+        <link rel="icon" type="image/png" href="/img/favicon16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/img/favicon32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/img/favicon48.png" sizes="48x48">
+        <link rel="icon" type="image/png" href="/img/favicon64.png" sizes="64x48">
+        <link rel="icon" type="image/png" href="/img/favicon96.png" sizes="96x96">
+        <link rel="apple-touch-icon" href="/img/logo.png">
 
-    <meta name="theme-color" content="#C667FF">
-    <meta name="language" content="en">
-    <title>Mind Map Wizard - 404 Not Found</title>
-    <style>
-        :root {
-            --primary-color: #C667FF;
-            --secondary-color: #9D34D4;
-            --background-color: #f8fafc;
-            --text-color: #1e293b;
-            --border-color: #e2e8f0;
-            --card-background: #ffffff;
-            --error-color: #dc2626;
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: var(--background-color);
-            color: var(--text-color);
-        }
-        
-        .container {
-            display: flex;
-            flex-direction: column-reverse;
-            justify-content: center;
-            align-items: center;
-            padding: 24px;
-        }
+        <meta name="theme-color" content="#C667FF">
+        <meta name="language" content="en">
+        <title>Mind Map Wizard - 404 Not Found</title>
+        <style>
 
-        .content {
-            display: flex;
-            flex-direction: row;
-            gap: 16px;
-            width: 100%;
-            max-width: 1200px;
-        }
+            :root {
+                --primary-color: #C667FF;
+                --secondary-color: #9D34D4;
+                --background-color: #F5F5F7;
+                --text-color: #1e293b;
+                --border-color: #e2e8f0;
+                --error-color: #dc2626;
+            }
 
-        .text-section {
-            position: relative;
-            padding-bottom: 12px;
-            width: 100%;
-            max-width: 50%; 
-        }
+            body {
+                margin: 0;
+                min-height: 100vh;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+                color: #2d3748;
+                background-image: radial-gradient(circle, lightgray 3%, transparent 10%);
+                background-size: 20px 20px;
+                padding: 20px;
+            }
 
-        .title {
-            margin: 8px 0;
-            color: var(--text-color); 
-            font-weight: bold;
-            font-size: 2rem; 
-        }
+            .container {
+                text-align: center;
+                padding: 100px;
+                max-width: 600px;
+                animation: fadeIn 0.5s ease-in;
+                background-color: #FFFFFF;
+            }
 
-        .description {
-            margin: 8px 0;
-            color: var(--text-color);
-        }
+            .error-code {
+                font-size: 8rem;
+                font-weight: bold;
+                margin: 0;
+                color: #C667FF;
+                line-height: 1;
+            }
 
-        .cta-button {
-            width: auto; 
-            margin: 8px 0;
-            border: 1px solid transparent;
-            border-radius: 0.375rem; 
-            padding: 12px 28px; 
-            text-align: center;
-            background-color: var(--primary-color); 
-            color: white;
-            font-size:  1.1rem;
-            cursor: pointer;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
+            .error-message {
+                font-size: 1.5rem;
+                margin: 1rem 0 2rem;
+                color: #4a5568;
+            }
 
-        .cta-button:hover {
-            background-color: #4338CA; 
-        }
+            .home-button {
+                display: inline-block;
+                padding: 1rem 2rem;
+                background: var(--text-color);
+                border: 2px solid var(--text-color);
+                color: white;
+                text-decoration: none !important;
+                border-radius: 50px;
+                font-weight: 600;
+                transition: transform 0.2s, background-color 0.2s;
+                box-shadow: 0 4px 6px rgba(198, 103, 255, 0.1);
+            }
 
-        .cta-button:focus {
-            outline: none;
-            box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.5);
-        }
+            .home-button:hover {
+                background: #FFFFFF;
+                color: var(--text-color);
+                border: 2px solid var(--text-color);
 
-        .image-section {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+            }
 
-        .side-image {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+            a {
+                font-size: 1.2rem;
+                color: #1e293b;
+                text-decoration: none;
+            }
 
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="content">
-            <div class="text-section">
-                <h1 class="title">Page not found!</h1>
-                <p class="description">Sorry about that! Please visit our homepage to get where you need to go.</p>
-                <button class="cta-button">Take me there!</button>
-            </div>
-            <div class="image-section">
-                <img src="https://i.ibb.co/G9DC8S0/404-2.png" alt="404 Image" />
-            </div>
+            a:hover {
+                color: var(--primary-color);
+                text-decoration: underline;
+            }
+
+            footer {
+                background-color: #F2F2F7;
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                font-size: 0.8em;
+                margin-top: 40px;
+                position: fixed;
+                bottom: 0;
+            }
+
+            .footer-content {
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                margin-bottom: 30px;
+                padding: 20px;
+
+            }
+
+            .footer-links {
+                display: flex;
+                align-items: center;
+            }
+
+            .separator {
+                color: #9b9999;
+                margin: 0 3px;
+                font-size: 1em;
+                font-weight: 200;
+            }
+
+            .footer-link {
+                color: #333;
+                transition: color 0.3s;
+                text-decoration: none;
+                font-size: 15px;
+
+            }
+
+            .footer-link:hover {
+                color: var(--primary-color);
+                text-decoration: none;
+            }
+
+            .copyright {
+                margin: 0;
+                font-size: 15px;
+            }
+
+            @media (max-width: 720px) {
+                .footer-content {
+                    flex-direction: column;
+                    margin-bottom: 20px;
+                }
+
+                .footer-links {
+                    margin-bottom: 10px;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <img
+                src="/img/favicon96.png"
+                alt="Logo"
+                height="50px"
+                width="50px"
+                style="margin-bottom: 30px;">
+            <h1 class="error-code">404</h1>
+            <p class="error-message">Oops! This page seems to have wandered off the map.</p>
+            <a href="/" style="margin-right: 30px;">Whats Mind Map Wizard?</a>
+            <a href="/" class="home-button">Return Home</a>
         </div>
-        <div class="side-image">
-            <img src="https://i.ibb.co/ck1SGFJ/Group.png" alt="Group Image" />
-        </div>
-    </div>
-
-        </body>
-        </html>
+        <div style="height: 30px;"></div>
+        <footer>
+            <div class="footer-content">
+                <div class="footer-links">
+                    <p style="margin: 0;">
+                        <a href="mailto:contact@mindmapwizard.com" class="footer-link">Contact</a>
+                        <span class="separator">|</span>
+                        <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
+                        <span class="separator">|</span>
+                        <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">Github</a>
+                    </p>
+                </div>
+                <p class="copyright" style="margin: 0;">© 2025 Mind Map Wizard.</p>
+            </div>
+        </footer>
+    </body>
+</html>
