--- a/index.html
+++ b/index.html
@@ -1177,6 +1177,8 @@
         <span class="roadmap-item-soon">Soon</span>More export options e.g. PNG or PDF</li>
     <li class="roadmap-li">
         <span class="roadmap-item-soon">Soon</span>Explore further from specific branches</li>
+        <li class="roadmap-li">
+        <span class="roadmap-item-soon">Soon</span>Canva Extension</li>
 
     <li class="roadmap-li">
         <span class="roadmap-item-soon">Soon</span>Sharing Mind Maps</li>
