--- a/history.html
+++ b/history.html
@@ -650,14 +650,18 @@
         </style>
     </head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4RTLM6HX39"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+        async="async"
+        src="https://www.googletagmanager.com/gtag/js?id=G-4RTLM6HX39"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-  gtag('config', 'G-4RTLM6HX39');
-</script>
+        gtag('config', 'G-4RTLM6HX39');
+    </script>
     <body>
         <div id="history-view">
             <div class="header">
@@ -1054,18 +1058,15 @@
                 return;
             
             try {
-                const response = await fetch(
-                    'https://mindmap-sharing.linus-schaerli.workers.dev/share',
-                    {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify(
-                            {topic: currentMindmap.topic, markdown: currentMindmap.markdown, timestamp: currentMindmap.timestamp}
-                        )
-                    }
-                );
+                const response = await fetch('https://api.mindmapwizard.com/share', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(
+                        {topic: currentMindmap.topic, markdown: currentMindmap.markdown, timestamp: currentMindmap.timestamp}
+                    )
+                });
 
                 const data = await response.json();
 
