--- a/404.html
+++ b/404.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mind Map Wizard - 404 Not Found</title>
         <meta
             name="description"
             content="Mind Map Wizard: Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
         <meta
             name="keywords"
-            content="mind map, mind mapping, AI, text to mindmap, free mind map generator, no sign up, no ads">
+            content="mind map, mind mapping, AI, text to mind map, free mind map generator, no sign up, no ads">
 
         <meta property="og:title" content="Mind Map Wizard | Text to Mind Map AI">
         <meta
@@ -34,7 +35,24 @@
 
         <meta name="theme-color" content="#C667FF">
         <meta name="language" content="en">
-        <title>Mind Map Wizard - 404 Not Found</title>
+        <!-- Google Tag Manager -->
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+                var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s),
+                    dl = l != 'dataLayer'
+                        ? '&l=' + l
+                        : '';
+                j.async = true;
+                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                f
+                    .parentNode
+                    .insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-TF3MJBX9');
+        </script>
+        <!-- End Google Tag Manager -->
         <style>
 
             :root {
@@ -44,6 +62,16 @@
                 --text-color: #1e293b;
                 --border-color: #e2e8f0;
                 --error-color: #dc2626;
+            }
+
+            @font-face {
+                font-family: 'Open Sans';
+                src: url("/OpenSans-ExtraBold.ttf") format('truetype'), url("/OpenSans-ExtraBold.ttf") format('ttf');
+                font-weight: 800;
+                font-style: normal;
+                font-display: swap;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
             }
 
             body {
@@ -174,9 +202,113 @@
                     margin-bottom: 10px;
                 }
             }
+            .popup {
+                display: none;
+                position: fixed;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.32);
+                justify-content: center;
+                align-items: center;
+                z-index: 1100;
+            }
+
+            .popup-content {
+                background-color: white;
+                padding: 20px;
+                border-radius: 20px;
+                text-align: left;
+                max-width: 300px;
+                display: flex;
+                line-height: 1.5;
+                flex-direction: column;
+                align-items: space-between;
+            }
+
+            .accept-terms-button,
+            .decline-terms-button {
+                margin: 5px;
+                padding: 12px 20px;
+                border-radius: 20px;
+                cursor: pointer;
+                font-size: 0.9rem;
+            }
+
+            .accept-terms-button {
+                background-color: var(--primary-color);
+                color: white;
+                border: none;
+                transition: all 0.3s ease;
+            }
+
+            .decline-terms-button {
+                background-color: var(--border-color);
+                color: black;
+                border: none;
+            }
+
+            .accept-terms-button:hover {
+                background-color: #b73cfe;
+            }
+
+            .decline-terms-button:hover {
+                background-color: rgb(215, 215, 215);
+            }
+
+            .legal-purposes {
+                margin: 0;
+                padding-left: 20px;
+            }
+
+            .popup-content a {
+                background-color: #f0f0f0;
+                padding: 3px;
+                border-radius: 6px;
+                text-decoration: none;
+                transition: all 0.1s ease;
+                font-size: 1rem;
+            }
+            .popup-content a:hover {
+                background-color: #e6e6e6;
+            }
         </style>
+    <!-- Google tag (gtag.js) -->
+        <script async="async" src="/consent.js"></script>
+        <script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-4RTLM6HX39"></script>
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF3MJBX9" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
+        <!-- End Google Tag Manager (noscript) -->
+        <div class="popup" id="legalPopup">
+            <div class="popup-content">
+                <div>
+                    <h2>🍪 Cookies</h2>
+                    <p>To proceed, you need to agree to our
+                        <a href="/terms-of-use.html" style="color: var(--text-color);">Terms of Use</a>
+                        and
+                        <a
+                            href="/privacy-policy.html"
+                            onclick="event.preventDefault();"
+                            style="color: var(--text-color);">Privacy Policy</a>
+                        <br>
+                        <div class="whitespace"></div>
+
+                        <strong>Purposes:</strong>
+                        <ul class="legal-purposes">
+                            <li>Functionality</li>
+                            <li>Analytics</li>
+                        </ul>
+                    </p>
+                    <div class="whitespace"></div>
+                </div>
+                <button onclick="closePopup()" class="decline-terms-button">Decline</button>
+                <button onclick="acceptDisclaimer()" class="accept-terms-button">Accept and Continue</button>
+            </div>
+        </div>
         <div class="container">
             <img
                 src="/img/favicon96.png"
@@ -187,7 +319,7 @@
             <h1 class="error-code">404</h1>
             <p class="error-message">Oops! This page seems to have wandered off the map.</p>
             <a href="/" style="margin-right: 30px;">Whats Mind Map Wizard?</a>
-            <a href="/" class="home-button">Return Home</a>
+            <a href="/new" class="home-button">Return Home</a>
         </div>
         <div style="height: 30px;"></div>
         <footer>
@@ -198,11 +330,14 @@
                         <span class="separator">|</span>
                         <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
                         <span class="separator">|</span>
+                        <a href="/privacy-policy.html" class="footer-link">Privacy Policy</a>
+                        <span class="separator">|</span>
                         <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">Github</a>
                     </p>
                 </div>
                 <p class="copyright" style="margin: 0;">© 2025 Mind Map Wizard.</p>
             </div>
         </footer>
+
     </body>
 </html>
